# aMAZing-project

./: README.md
source/: CMakeLists.txt
source/core/: main.cpp  maze.cpp  maze.h
